ParserLibs/poplParser.py
# Generated from popl.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class poplParser ( Parser ):

    grammarFileName = "popl.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'+'", "'-'", "'*'", "'/'", "'%'", "'='", 
                     "'+='", "'-='", "'*='", "'/='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "NUMBER", "LETTER", 
                      "VARNAME", "NEWLINE", "WHITESPACE" ]

    RULE_prog = 0
    RULE_variable = 1
    RULE_expression = 2
    RULE_arithmetic = 3
    RULE_plus = 4
    RULE_minus = 5
    RULE_mult = 6
    RULE_div = 7
    RULE_mod = 8
    RULE_assignment = 9
    RULE_equals = 10
    RULE_pluseq = 11
    RULE_minuseq = 12
    RULE_multeq = 13
    RULE_diveq = 14

    ruleNames =  [ "prog", "variable", "expression", "arithmetic", "plus", 
                   "minus", "mult", "div", "mod", "assignment", "equals", 
                   "pluseq", "minuseq", "multeq", "diveq" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    NUMBER=11
    LETTER=12
    VARNAME=13
    NEWLINE=14
    WHITESPACE=15

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(poplParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(poplParser.ExpressionContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(poplParser.NEWLINE)
            else:
                return self.getToken(poplParser.NEWLINE, i)

        def getRuleIndex(self):
            return poplParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)




    def prog(self):

        localctx = poplParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 33 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 30
                self.expression()
                self.state = 31
                self.match(poplParser.NEWLINE)
                self.state = 35 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==11 or _la==13):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARNAME(self):
            return self.getToken(poplParser.VARNAME, 0)

        def getRuleIndex(self):
            return poplParser.RULE_variable

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariable" ):
                listener.enterVariable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariable" ):
                listener.exitVariable(self)




    def variable(self):

        localctx = poplParser.VariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_variable)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37
            self.match(poplParser.VARNAME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(poplParser.AssignmentContext,0)


        def arithmetic(self):
            return self.getTypedRuleContext(poplParser.ArithmeticContext,0)


        def getRuleIndex(self):
            return poplParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)




    def expression(self):

        localctx = poplParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_expression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.state = 39
                self.assignment()
                pass

            elif la_ == 2:
                self.state = 40
                self.arithmetic()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArithmeticContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def plus(self):
            return self.getTypedRuleContext(poplParser.PlusContext,0)


        def minus(self):
            return self.getTypedRuleContext(poplParser.MinusContext,0)


        def mult(self):
            return self.getTypedRuleContext(poplParser.MultContext,0)


        def div(self):
            return self.getTypedRuleContext(poplParser.DivContext,0)


        def mod(self):
            return self.getTypedRuleContext(poplParser.ModContext,0)


        def getRuleIndex(self):
            return poplParser.RULE_arithmetic

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArithmetic" ):
                listener.enterArithmetic(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArithmetic" ):
                listener.exitArithmetic(self)




    def arithmetic(self):

        localctx = poplParser.ArithmeticContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_arithmetic)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 43
                self.plus()
                pass

            elif la_ == 2:
                self.state = 44
                self.minus()
                pass

            elif la_ == 3:
                self.state = 45
                self.mult()
                pass

            elif la_ == 4:
                self.state = 46
                self.div()
                pass

            elif la_ == 5:
                self.state = 47
                self.mod()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PlusContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(poplParser.VariableContext)
            else:
                return self.getTypedRuleContext(poplParser.VariableContext,i)


        def NUMBER(self, i:int=None):
            if i is None:
                return self.getTokens(poplParser.NUMBER)
            else:
                return self.getToken(poplParser.NUMBER, i)

        def WHITESPACE(self, i:int=None):
            if i is None:
                return self.getTokens(poplParser.WHITESPACE)
            else:
                return self.getToken(poplParser.WHITESPACE, i)

        def getRuleIndex(self):
            return poplParser.RULE_plus

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPlus" ):
                listener.enterPlus(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPlus" ):
                listener.exitPlus(self)




    def plus(self):

        localctx = poplParser.PlusContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_plus)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [13]:
                self.state = 50
                self.variable()
                pass
            elif token in [11]:
                self.state = 51
                self.match(poplParser.NUMBER)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 57
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==15:
                self.state = 54
                self.match(poplParser.WHITESPACE)
                self.state = 59
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 60
            self.match(poplParser.T__0)
            self.state = 64
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==15:
                self.state = 61
                self.match(poplParser.WHITESPACE)
                self.state = 66
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 69
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [13]:
                self.state = 67
                self.variable()
                pass
            elif token in [11]:
                self.state = 68
                self.match(poplParser.NUMBER)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MinusContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(poplParser.VariableContext)
            else:
                return self.getTypedRuleContext(poplParser.VariableContext,i)


        def NUMBER(self, i:int=None):
            if i is None:
                return self.getTokens(poplParser.NUMBER)
            else:
                return self.getToken(poplParser.NUMBER, i)

        def WHITESPACE(self, i:int=None):
            if i is None:
                return self.getTokens(poplParser.WHITESPACE)
            else:
                return self.getToken(poplParser.WHITESPACE, i)

        def getRuleIndex(self):
            return poplParser.RULE_minus

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMinus" ):
                listener.enterMinus(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMinus" ):
                listener.exitMinus(self)




    def minus(self):

        localctx = poplParser.MinusContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_minus)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [13]:
                self.state = 71
                self.variable()
                pass
            elif token in [11]:
                self.state = 72
                self.match(poplParser.NUMBER)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 78
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==15:
                self.state = 75
                self.match(poplParser.WHITESPACE)
                self.state = 80
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 81
            self.match(poplParser.T__1)
            self.state = 85
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==15:
                self.state = 82
                self.match(poplParser.WHITESPACE)
                self.state = 87
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 90
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [13]:
                self.state = 88
                self.variable()
                pass
            elif token in [11]:
                self.state = 89
                self.match(poplParser.NUMBER)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MultContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(poplParser.VariableContext)
            else:
                return self.getTypedRuleContext(poplParser.VariableContext,i)


        def NUMBER(self, i:int=None):
            if i is None:
                return self.getTokens(poplParser.NUMBER)
            else:
                return self.getToken(poplParser.NUMBER, i)

        def WHITESPACE(self, i:int=None):
            if i is None:
                return self.getTokens(poplParser.WHITESPACE)
            else:
                return self.getToken(poplParser.WHITESPACE, i)

        def getRuleIndex(self):
            return poplParser.RULE_mult

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMult" ):
                listener.enterMult(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMult" ):
                listener.exitMult(self)




    def mult(self):

        localctx = poplParser.MultContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_mult)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [13]:
                self.state = 92
                self.variable()
                pass
            elif token in [11]:
                self.state = 93
                self.match(poplParser.NUMBER)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==15:
                self.state = 96
                self.match(poplParser.WHITESPACE)
                self.state = 101
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 102
            self.match(poplParser.T__2)
            self.state = 106
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==15:
                self.state = 103
                self.match(poplParser.WHITESPACE)
                self.state = 108
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 111
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [13]:
                self.state = 109
                self.variable()
                pass
            elif token in [11]:
                self.state = 110
                self.match(poplParser.NUMBER)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DivContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(poplParser.VariableContext)
            else:
                return self.getTypedRuleContext(poplParser.VariableContext,i)


        def NUMBER(self, i:int=None):
            if i is None:
                return self.getTokens(poplParser.NUMBER)
            else:
                return self.getToken(poplParser.NUMBER, i)

        def WHITESPACE(self, i:int=None):
            if i is None:
                return self.getTokens(poplParser.WHITESPACE)
            else:
                return self.getToken(poplParser.WHITESPACE, i)

        def getRuleIndex(self):
            return poplParser.RULE_div

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDiv" ):
                listener.enterDiv(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDiv" ):
                listener.exitDiv(self)




    def div(self):

        localctx = poplParser.DivContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_div)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [13]:
                self.state = 113
                self.variable()
                pass
            elif token in [11]:
                self.state = 114
                self.match(poplParser.NUMBER)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 120
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==15:
                self.state = 117
                self.match(poplParser.WHITESPACE)
                self.state = 122
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 123
            self.match(poplParser.T__3)
            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==15:
                self.state = 124
                self.match(poplParser.WHITESPACE)
                self.state = 129
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 132
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [13]:
                self.state = 130
                self.variable()
                pass
            elif token in [11]:
                self.state = 131
                self.match(poplParser.NUMBER)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ModContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(poplParser.VariableContext)
            else:
                return self.getTypedRuleContext(poplParser.VariableContext,i)


        def NUMBER(self, i:int=None):
            if i is None:
                return self.getTokens(poplParser.NUMBER)
            else:
                return self.getToken(poplParser.NUMBER, i)

        def WHITESPACE(self, i:int=None):
            if i is None:
                return self.getTokens(poplParser.WHITESPACE)
            else:
                return self.getToken(poplParser.WHITESPACE, i)

        def getRuleIndex(self):
            return poplParser.RULE_mod

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMod" ):
                listener.enterMod(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMod" ):
                listener.exitMod(self)




    def mod(self):

        localctx = poplParser.ModContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_mod)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [13]:
                self.state = 134
                self.variable()
                pass
            elif token in [11]:
                self.state = 135
                self.match(poplParser.NUMBER)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 141
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==15:
                self.state = 138
                self.match(poplParser.WHITESPACE)
                self.state = 143
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 144
            self.match(poplParser.T__4)
            self.state = 148
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==15:
                self.state = 145
                self.match(poplParser.WHITESPACE)
                self.state = 150
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 153
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [13]:
                self.state = 151
                self.variable()
                pass
            elif token in [11]:
                self.state = 152
                self.match(poplParser.NUMBER)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def equals(self):
            return self.getTypedRuleContext(poplParser.EqualsContext,0)


        def pluseq(self):
            return self.getTypedRuleContext(poplParser.PluseqContext,0)


        def minuseq(self):
            return self.getTypedRuleContext(poplParser.MinuseqContext,0)


        def multeq(self):
            return self.getTypedRuleContext(poplParser.MulteqContext,0)


        def diveq(self):
            return self.getTypedRuleContext(poplParser.DiveqContext,0)


        def getRuleIndex(self):
            return poplParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)




    def assignment(self):

        localctx = poplParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,23,self._ctx)
            if la_ == 1:
                self.state = 155
                self.equals()
                pass

            elif la_ == 2:
                self.state = 156
                self.pluseq()
                pass

            elif la_ == 3:
                self.state = 157
                self.minuseq()
                pass

            elif la_ == 4:
                self.state = 158
                self.multeq()
                pass

            elif la_ == 5:
                self.state = 159
                self.diveq()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EqualsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(poplParser.VariableContext)
            else:
                return self.getTypedRuleContext(poplParser.VariableContext,i)


        def NUMBER(self):
            return self.getToken(poplParser.NUMBER, 0)

        def WHITESPACE(self, i:int=None):
            if i is None:
                return self.getTokens(poplParser.WHITESPACE)
            else:
                return self.getToken(poplParser.WHITESPACE, i)

        def getRuleIndex(self):
            return poplParser.RULE_equals

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEquals" ):
                listener.enterEquals(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEquals" ):
                listener.exitEquals(self)




    def equals(self):

        localctx = poplParser.EqualsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_equals)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self.variable()
            self.state = 166
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==15:
                self.state = 163
                self.match(poplParser.WHITESPACE)
                self.state = 168
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 169
            self.match(poplParser.T__5)
            self.state = 173
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==15:
                self.state = 170
                self.match(poplParser.WHITESPACE)
                self.state = 175
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 178
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [13]:
                self.state = 176
                self.variable()
                pass
            elif token in [11]:
                self.state = 177
                self.match(poplParser.NUMBER)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PluseqContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(poplParser.VariableContext)
            else:
                return self.getTypedRuleContext(poplParser.VariableContext,i)


        def NUMBER(self):
            return self.getToken(poplParser.NUMBER, 0)

        def WHITESPACE(self, i:int=None):
            if i is None:
                return self.getTokens(poplParser.WHITESPACE)
            else:
                return self.getToken(poplParser.WHITESPACE, i)

        def getRuleIndex(self):
            return poplParser.RULE_pluseq

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPluseq" ):
                listener.enterPluseq(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPluseq" ):
                listener.exitPluseq(self)




    def pluseq(self):

        localctx = poplParser.PluseqContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_pluseq)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 180
            self.variable()
            self.state = 184
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==15:
                self.state = 181
                self.match(poplParser.WHITESPACE)
                self.state = 186
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 187
            self.match(poplParser.T__6)
            self.state = 191
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==15:
                self.state = 188
                self.match(poplParser.WHITESPACE)
                self.state = 193
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 196
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [13]:
                self.state = 194
                self.variable()
                pass
            elif token in [11]:
                self.state = 195
                self.match(poplParser.NUMBER)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MinuseqContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(poplParser.VariableContext)
            else:
                return self.getTypedRuleContext(poplParser.VariableContext,i)


        def NUMBER(self):
            return self.getToken(poplParser.NUMBER, 0)

        def WHITESPACE(self, i:int=None):
            if i is None:
                return self.getTokens(poplParser.WHITESPACE)
            else:
                return self.getToken(poplParser.WHITESPACE, i)

        def getRuleIndex(self):
            return poplParser.RULE_minuseq

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMinuseq" ):
                listener.enterMinuseq(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMinuseq" ):
                listener.exitMinuseq(self)




    def minuseq(self):

        localctx = poplParser.MinuseqContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_minuseq)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 198
            self.variable()
            self.state = 202
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==15:
                self.state = 199
                self.match(poplParser.WHITESPACE)
                self.state = 204
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 205
            self.match(poplParser.T__7)
            self.state = 209
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==15:
                self.state = 206
                self.match(poplParser.WHITESPACE)
                self.state = 211
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 214
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [13]:
                self.state = 212
                self.variable()
                pass
            elif token in [11]:
                self.state = 213
                self.match(poplParser.NUMBER)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MulteqContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(poplParser.VariableContext)
            else:
                return self.getTypedRuleContext(poplParser.VariableContext,i)


        def NUMBER(self):
            return self.getToken(poplParser.NUMBER, 0)

        def WHITESPACE(self, i:int=None):
            if i is None:
                return self.getTokens(poplParser.WHITESPACE)
            else:
                return self.getToken(poplParser.WHITESPACE, i)

        def getRuleIndex(self):
            return poplParser.RULE_multeq

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMulteq" ):
                listener.enterMulteq(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMulteq" ):
                listener.exitMulteq(self)




    def multeq(self):

        localctx = poplParser.MulteqContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_multeq)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 216
            self.variable()
            self.state = 220
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==15:
                self.state = 217
                self.match(poplParser.WHITESPACE)
                self.state = 222
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 223
            self.match(poplParser.T__8)
            self.state = 227
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==15:
                self.state = 224
                self.match(poplParser.WHITESPACE)
                self.state = 229
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 232
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [13]:
                self.state = 230
                self.variable()
                pass
            elif token in [11]:
                self.state = 231
                self.match(poplParser.NUMBER)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DiveqContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(poplParser.VariableContext)
            else:
                return self.getTypedRuleContext(poplParser.VariableContext,i)


        def NUMBER(self):
            return self.getToken(poplParser.NUMBER, 0)
